--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,37 @@
-/test/
-/.venv/
-uploads/*
-!./uploads/default.jpg
-log/*
+test
 .venv
+uploads/
+!./uploads/default.jpg
 .idea
+**/__pycache__/
+*.pyc
+
+# /static/
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+openapi.json
+client
