--- a/static/package.json
+++ b/static/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
-    "vue": "^3.2.47"
+    "cogo-toast": "^4.2.3",
+    "vue": "^3.2.47",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@types/node": "^18.15.11",
