--- a/static/tsconfig.json
+++ b/static/tsconfig.json
@@ -17,7 +17,7 @@
       "@/*": ["src/*"]
         },
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "src/script/chart.ts"],
   "references": [{ "path": "./tsconfig.node.json" }],
   
 }
