--- a/static/package.json
+++ b/static/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "generate-client": "openapi --input http://127.0.0.1:80/openapi.json --output ./src/client --client axios",
+    "generate-client-live": "openapi --input http://127.0.0.1:80/openapi.json --output ./src/client --client axios",
+    "generate-client": "openapi --input ./openapi.json --output ./src/client --client axios",
     "preview": "vite preview"
   },
   "dependencies": {
