--- a/.github/workflows/master_lolik.yml
+++ b/.github/workflows/master_lolik.yml
@@ -11,52 +11,60 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  job1:
+    build:
+      runs-on: ubuntu-latest
+
+      steps:
+        - uses: actions/checkout@v2
+
+        - name: Set up Python version
+          uses: actions/setup-python@v1
+          with:
+            python-version: '3.10'
+
+        - name: Create and start virtual environment
+          run: |
+            python -m venv venv
+            source venv/bin/activate
+        
+        - name: Install dependencies
+          run: pip install -r requirements.txt
+
+        # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
+        
+        - name: Upload artifact for deployment jobs
+          uses: actions/upload-artifact@v2
+          with:
+            name: python-app
+            path: |
+              . 
+              !venv/
+  job2:
+    build2:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v2
 
-      - name: Set up Python version
-        uses: actions/setup-python@v1
-        with:
-          python-version: '3.10'
-
-      - name: Create and start virtual environment
-        run: |
-          python -m venv venv
-          source venv/bin/activate
-      
-      - name: Install dependencies
-        run: pip install -r requirements.txt
-
-      # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
-      
-      - name: Upload artifact for deployment jobs
-        uses: actions/upload-artifact@v2
-        with:
-          name: python-app
-          path: |
-            . 
-            !venv/
-            
-      - name: cd static
-        run: cd static
+      - name: checkout
+        uses: actions/checkout@master
 
       # 安装依赖
       - name: install
-        run: npm install
-
+        run: cd static && npm install
+      # 生成客户端
       - name: generate client
-        run: npm run generate-client
+        run: cd static && npm run generate-client
+
       # 打包构建
       - name: build
-        run: npm run build
+        run: cd static && npm run build
+
+     
       
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build
+    needs: [build,build2]
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
