--- a/.github/workflows/master_lolik.yml
+++ b/.github/workflows/master_lolik.yml
@@ -39,30 +39,13 @@ jobs:
           path: |
             . 
             !venv/
-  build2:
-    runs-on: ubuntu-latest
-    steps:
-
-      - name: checkout
-        uses: actions/checkout@master
-
-      # 安装依赖
-      - name: install
-        run: cd static && npm install
-      # 生成客户端
-      - name: generate client
-        run: cd static && npm run generate-client
-
-      # 打包构建
-      - name: build
-        run: cd static && npm run build
 
      
       
 
   deploy:
     runs-on: ubuntu-latest
-    needs: [build,build2]
+    needs: build
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
