--- a/static/package.json
+++ b/static/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "generate-client-live": "openapi --input http://127.0.0.1:80/openapi.json --output ./src/client --client axios",
-    "generate-client": "openapi --input ./openapi.json --output ./src/client --client axios",
+    "generate-client": "openapi --input http://127.0.0.1:80/openapi.json --output ./src/client --client axios",
+    "generate-client-static": "openapi --input ./openapi.json --output ./src/client --client axios",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -20,10 +20,12 @@
     "@types/node": "^18.15.11",
     "@vitejs/plugin-vue": "^4.1.0",
     "autoprefixer": "^10.4.14",
+    "naive-ui": "^2.34.3",
     "openapi-typescript-codegen": "^0.23.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.1",
     "typescript": "^4.9.3",
+    "vfonts": "^0.0.3",
     "vite": "^4.2.0",
     "vue-tsc": "^1.2.0"
   }
