--- a/static/tsconfig.json
+++ b/static/tsconfig.json
@@ -13,6 +13,7 @@
     "skipLibCheck": true,
     "noEmit": true,
     "baseUrl": "./",  
+    "types": ["naive-ui/volar"],
     "paths": { 
       "@/*": ["src/*"]
         },
