docker add nginx+mysql

--- a/compose.yaml
+++ b/compose.yaml
@@ -5,6 +5,7 @@ services:
     container_name: mysql
     image: mysql:8.0.32
     command: --default-authentication-plugin=mysql_native_password --mysqlx=0
+    restart: always
     networks:
       - backnet
     environment:
@@ -21,6 +22,7 @@ services:
   backend:
     container_name: fastapi
     build: .
+    restart: always
     networks:
       - backnet
     depends_on:
@@ -38,13 +40,15 @@ services:
 
   proxy:
     build: nginx
+    restart: always
     ports:
       - 80:80
     depends_on:
       - backend
     volumes:
       - ./static/dist:/usr/share/nginx/html
-      - ./nginx/nginx.conf:/etc/nginx/default.conf
+      - ./uploads:/usr/share/nginx/html/uploads
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
       - ./nginx/logs:/var/log/nginx
     networks:
       - backnet
