--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,21 +1,26 @@
-http {
-    include       mime.types;
-    default_type  application/octet-stream;
-    sendfile        on;
-    keepalive_timeout  300;
-    server {
-        listen       80;
-        server_name  localhost;
-
-        # location ^~*/(docs|openapi.json|uploads/|api/) {
-        #     proxy_pass   http://backend:8000;
-        # }
-
-        location / {
-            root   /usr/share/nginx/html;
-            try_files $uri $uri/ /index.html;
-        }
-        
+server {
+    listen       80;
+    server_name  localhost;
+    location = /docs {
+        proxy_pass   http://backend:8000;
     }
+    location = /openapi.json {
+        proxy_pass   http://backend:8000;
+    }
+
+    location /api {
+        proxy_pass   http://backend:8000;
+    }
+
+    # location /uploads {
+    #     proxy_pass   http://backend:8000;
+    # }
+
+    location / {
+        root   /usr/share/nginx/html;
+        try_files $uri $uri/ /index.html;
+    }
+    
 }
+
  
