--- a/compose.yaml
+++ b/compose.yaml
@@ -48,7 +48,7 @@ services:
     volumes:
       - ./static/dist:/usr/share/nginx/html
       - ./uploads:/usr/share/nginx/html/uploads
-      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./nginx/logs:/var/log/nginx
     networks:
       - backnet
