--- a/static/package.json
+++ b/static/package.json
@@ -11,8 +11,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@kangc/v-md-editor": "^2.3.15",
     "axios": "^1.3.4",
-    "cogo-toast": "^4.2.3",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
