--- a/static/tsconfig.json
+++ b/static/tsconfig.json
@@ -12,6 +12,7 @@
     "lib": ["ESNext", "DOM"],
     "skipLibCheck": true,
     "noEmit": true,
+    "allowJs": true,
     "baseUrl": "./",  
     "types": ["naive-ui/volar"],
     "paths": { 
