--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: '1.0'
+version: '3.0'
 
 services:
   mysqldb:
@@ -36,23 +36,25 @@ services:
       - dev=false
     volumes:
       - ./:/code
-    expose:
-      - 8000
-
-  proxy:
-    build: nginx
-    restart: always
     ports:
-      - 80:80
-    depends_on:
-      - backend
-    volumes:
-      - ./static/dist:/usr/share/nginx/html
-      - ./uploads:/usr/share/nginx/html/uploads
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - ./nginx/logs:/var/log/nginx
-    networks:
-      - backnet
+      - 8000:8000
+    # expose:
+    #   - 8000
+
+  # proxy:
+  #   build: nginx
+  #   restart: always
+  #   ports:
+  #     - 80:80
+  #   depends_on:
+  #     - backend
+  #   volumes:
+  #     - ./static/dist:/usr/share/nginx/html
+  #     - ./uploads:/usr/share/nginx/html/uploads
+  #     - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+  #     - ./nginx/logs:/var/log/nginx
+  #   networks:
+  #     - backnet
 
 networks:
   backnet:
