--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,6 @@ dependencies = [
     "uvicorn~=0.22",
     "SQLAlchemy~=2.0",
     "slowapi~=0.1",
-    "PyYAML~=6.0",
     "python-jose~=3.3",
     "PyMySQL~=1.0",
     "pydantic~=1.10",
@@ -25,6 +24,7 @@ dependencies = [
     "xlwt>=1.3.0",
     "python-multipart>=0.0.6",
     "websockets>=11.0.3",
+    "ruamel-yaml>=0.17.28",
 ]
 requires-python = ">=3.11"
 license = {text = "MIT"}
